--- a/style.css
+++ b/style.css
@@ -1,16 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 
 * {
-    /* margin: 0%;
-    padding: 0%; */
     font-family: 'Source Sans Pro', Arial, Helvetica, sans-serif;
 }
 
-.background {
+body {
     background-color: rgb(255, 255, 255);
 }
 
-.center {
+header {
     color: rgb(0, 0, 115);
     margin-left: 5%;
     margin-right: 5%;
@@ -31,6 +29,11 @@ img {
     width: 120px;
 }
 
+h2 {
+    margin: 0.5%;
+    font-weight: lighter;
+}
+
 .div-cotizador {
     background-color: rgb(0, 0, 115);
     color:rgb(255, 255, 255);
@@ -38,23 +41,43 @@ img {
     margin-right: 5%;
     padding: 10px;
 
-    border-color: whitesmoke;
     box-shadow: 0px 20px 20px -8px rgba(0,0,0,0.80);
     border-radius: 0.7rem;
 
     font-size: 150%;
+}
 
-    /* display: flex;
+div {
+    margin: 0.5%;
+    /* padding: 2%; */
+    display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center;
     align-items: center; */
+}
+
+select, input {
+    margin: 0.5%;
+    min-width: 20% !important;
+    width: 50% !important;
+}
+
+.importe {
+    margin: 0.5%;
+    display: flex;
+    justify-content: center;
+}
+
+button {
+    margin-left: 40%;
+    margin-right: 40%;
 }
 
 button:hover {
     color: whitesmoke !important;
-    background-color: blueviolet !important;
+    background-color: rgb(81, 0, 255) !important;
 }
 
 button:active {
-    background-color: black !important;
+    background-color: rgb(0, 0, 94) !important
 }
